tests/errors/syn_method8.java
public class syn_method8 {
public static String main ( {
 
}
}